@@ -210,6 +210,11 @@ and it enables complete trees to be rebuilt using the latest libraries.
 Instead of doing any package building, just perform fetches for all
 packages (the main package as well as all dependencies.)
 .TP 
+.BR "\-\-fetch-all-uri " (\fB\-f\fR)
+Instead of doing any package building, just perform fetches for all
+packages (the main package as well as all dependencies.), grabbing all potential
+files.
+.TP 
 .BR "\-\-getbinpkg " (\fB\-g\fR)
 Using the server and location defined in \fIPORTAGE_BINHOST\fR (see 
 \fBmake.conf\fR(5)), portage will download the information from each binary 
